<resources>
    <string name="app_name">Spanish Daily</string>
    <string name="built_by">Built By:</string>
    <string name="app_author">Marcus Plienegger</string>
    <string name="view_source_code">View Source Code</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="title_home">Home</string>
    <string name="title_search">Buscar</string>
    <string name="title_history">Historia</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_basura">Basura</string>
    <string name="title_options">Opciones</string>
    <string name="title_creditos">Créditos</string>
    <string name="title_about">About</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Español o Inglés</string>
    <string name="DETAIL_WORD">word detail</string>
    <string name="transition_word">word transition</string>
    <string name="transition_img">image transition</string>
    <string name="drawer_open">Navigation drawer opened</string>
    <string name="drawer_close">Navigation drawer closed</string>
    <string name="navigation_title">Navegación</string>
    <string-array name="dialog_main_options">
        <item>Add to Favorites</item>
        <item>Dismiss Word</item>
    </string-array>
    <string-array name="dialog_fav_options">
        <item>Remove from Favorites</item>
    </string-array>
    <string-array name="dialog_dismissed_options">
        <item>Restore Word</item>
        <item>Permanently delete Word</item>
    </string-array>
    <!--Selection filters-->
    <string name="dataset_favorite">favorites</string>
    <string name="dataset_unfiltered">unfiltered</string>
    <string name="dataset_dismissed">dismissed</string>
    <string name="dataset_search">search</string>
    <string name="dataset_empty">empty</string>
    <string name="layoutType_search">Search_Layout</string>
    <string name="layoutType_card">Card_Layout</string>
    <!--Preferences for OptionsFragment-->
    <string name="pref_key_wireless">key_wireless</string>
    <string name="pref_key_pull">key_pull</string>
    <string name="pref_key_notify">key_notify</string>
    <string name="pref_cat_general">Data</string>
    <string name="pref_cat_network">Network</string>
    <string name="pref_cat_other">Other</string>
    <string name="pref_title_wireless">Wireless</string>
    <string name="pref_title_Pull">Pull</string>
    <string name="pref_title_notify">Notifications</string>
    <string name="pref_title_rate">Rate/Send Feedback</string>
    <string name="pref_key_del_words">key_delete_words</string>
    <string name="pref_key_del_favs">key_delete_favs</string>
    <string name="pref_key_del_bin">key_delete_bin</string>
    <string name="pref_title_words">Remove words</string>
    <string name="pref_msg_del_words">This action is irreversible. Are you sure?</string>
    <string name="pref_title_del_words">Remove all words</string>
    <string name="pref_title_del_favs">Remove Favorites</string>
    <string name="pref_title_del_bin">Empty Recycle Bin</string>
    <!--Notification Identifiers -->
    <string name="notification_title">Word of the day: </string>
    <string name="notification_removed">Removed from Favorites</string>
    <string name="notification_added">Added to Favorites</string>
    <string name="playback_toast">play sound</string>
    <string name="notify_new_word">New Word added</string>
    <string name="notify_favorite_added">Favorite added</string>
    <string name="notify_favorite_removed">Favorite removed</string>
    <string name="notify_word_deleted">Word permanently deleted</string>
    <string name="notify_word_restored">Word restored</string>
    <string name="notify_word_dismissed">Word dismissed</string>
    <string name="notify_network_error">Error fetching Word from network</string>
    <string name="notify_empty_text_msg">Nada por aquí</string>
    <!--filename params -->
    <string name="temp_filename">temp</string>
    <string name="filetype_mp3">mp3</string>
    <string name="dialog_list_view">List View</string>
    <string name="dialog_grid_view">Grid View</string>
    <!--Detail Activity -->
    <string name="detail_translation_lbl">Traducción</string>
    <string name="detail_ejemplo_lbl">Ejemplo(s)</string>
</resources>
