<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed"
        android:textSize="18sp"
        android:textColor="@color/primary_dark"
        android:text="@string/title_creditos" />

    <RelativeLayout
        android:id="@+id/rl_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:minHeight="48dp">

        <TextView
            android:id="@+id/tv_built_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/primary_dark"
            android:text="@string/built_by" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="20dp"
            android:paddingTop="4dp"
            android:gravity="center_vertical|right"
            android:layout_toRightOf="@id/tv_built_by"
            android:text="@string/app_author"
            />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:background="@color/primary_dark"
        android:layout_height="1px"
    />

    <TextView
        android:id="@+id/tv_source_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical|right"
        android:text="@string/view_source_code"
        android:textAllCaps="true"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/tv_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical|right"
        android:paddingRight="20dp"
        android:text="@string/send_feedback"
        android:textAllCaps="true"
        android:textColor="@color/primary_text" />

    <View
        android:id="@+id/padding_bottom"
        android:layout_width="match_parent"
        android:layout_height="8dp" />

</LinearLayout>